# Cymple-Kuzu

./: README.md  setup.cfg
.github/workflows/: publish.yml  python-test.yml  workflow.yml
docs/source/: conf.py
src/cymple/: builder.py  table_model.py  typedefs.py
src/cymple/internal/: internal_renderer.py
src/cymple/internal/declarations/: !query_start.json  add_column.json  alter.json  and.json  drop_column.json  match.json  new_query.json  node.json  node_after_merge.json  operator_start.json  path.json  relation.json  relation_after_merge.json  table.json
src/cymple/internal/overloads/: add_column.py  and_.py  drop_column.py  new_query.py  node.py  path.py  relation.py  returns.py  table.py  where.py
src/samples/: basic.py
tests/: conftest.py
tests/data/onto_types/: labels.py
tests/unit/: test_clauses.py  test_clauses_with_table_model.py  test_real_use_cases.py  test_samples.py  test_table_model.py  test_utils.py
