[bdist_wheel]
universal = 1

[metadata]
name = cymple-kuzu
version = attr:src.cymple.__version__
description = A productivity enhancer for creating Cypher queries in Python
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
package_dir=
    =src
packages=find:
python_requires = >= 3.9

[options.packages.find]
where=src

[options.package_data]
* = *.md
cymple-kuzu = py.typed

[pycodestyle]
max-line-length = 120
exclude = .venv, build
